# hand-pose-estimation

./: .gitignore  README.md  analyze_results.py  detect.py  hand_pose_lab.ipynb  pyproject.toml
runs/pose/train/: results.csv
